[package]
name = "proxy_init"
version = "0.1.0"
edition = "2024"

[dependencies]
# The 'socks' feature is required to support your SOCKS5 proxy
reqwest = { version = "0.12", features = ["socks", "json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0" # For easy error handling
dotenvy = "0.15"
